Layout Bug fixes

--- a/basic-layout.css
+++ b/basic-layout.css
@@ -29,6 +29,7 @@ html, body {
 }
 
 
+
 .basic__layout--row {
     flex-direction: row;
 
@@ -44,7 +45,7 @@ html, body {
 
 
 .basic__sub__sky--column {
-    flex: 0 0 80%;
+    flex: 2;
     background: linear-gradient(180deg, #386393 0%, #416A99 13.5%, #6DB1FF 100%);
     display: flex;
     flex-direction: column;
@@ -53,7 +54,7 @@ html, body {
 .basic__sub__ground {
     flex: 1;
     background: linear-gradient(0deg, #211509 0%, #ECC98B 88%, #FFF 99.5%);
-    height: 20%;
+    flex: 0 0 20%;
 }
 
 
