--- a/global/components.css
+++ b/global/components.css
@@ -2,32 +2,25 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-
-
-    width: 100%; 
+    width: 100%;
     height: fit-content; 
     padding: 40px; 
-
     border: 4px solid #FFCF61;
     background: rgba(255, 218, 154, 0.60);
     box-shadow: 4px 4px 4px 0px #FFF inset, -4px -4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     box-sizing: border-box;
 }
 
-.SCENE1 .textbox {
-max-width: 2000px;
-
-}
 
 .SCENE2 .textbox {
-    max-width: 1500px;
+max-width: 800px;
     
-    }
+ }
 
 
 .SCENE1 .header__forum {
     height: 100%;
-    max-width: 2000px;
+
 
 }
 
@@ -62,6 +55,7 @@ max-width: 2000px;
     
 .brick.half {
      flex: 1;
+     height: 100%;
 }
     
     
@@ -74,7 +68,9 @@ max-width: 2000px;
     display:none;
     position: absolute;
     box-sizing: border-box;
-    min-width: 800px;
+    width: fit-content;
+    max-width: 40vw;
+    min-width: 20vw;
     top: 0%;
     left: 100%;
     padding: 10px;
