--- a/scenes/scene2.css
+++ b/scenes/scene2.css
@@ -24,5 +24,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
 
 }
