--- a/scenes/scene3.css
+++ b/scenes/scene3.css
@@ -1,7 +1,6 @@
 
 
 .scene3__sky__top__nav {
-flex: 1;
 width: 100%;
 
 
@@ -12,8 +11,9 @@ width: 100%;
 .scene3__sky__bot {
 display: flex;
 flex-direction: row;
-flex: 4;
-width: 100%;
+width: 80%;
+height: 100%;
+padding-top: 100px;
 
 
 
@@ -28,17 +28,13 @@ flex-direction: column;
 flex: 2;
 align-items: center;
 justify-content: center;
-max-width: 2000px;
-
-
 
 }
 
 
 .scene3__house__roof {
 background: linear-gradient(180deg, #D3AD86 9%, #36291B 13.5%);
-flex: 0.25;
-width: calc(100% + 40px); /* Increase the width for more overhang */
+width: 100%;
 
     
 }
@@ -49,8 +45,7 @@ display: flex;
 flex-direction: column;
 background-color: #D9D9D9;
 flex: 3;
-height: 50%;
-width:95%;
+height: 100%;
        
         
 }
