--- a/scenes/scene4.css
+++ b/scenes/scene4.css
@@ -4,8 +4,7 @@
     flex-direction: row;
     align-items: end;
     justify-content: end;
-    padding-left: 40px;
-    padding-right: 40px;
+
     
     
     
@@ -14,8 +13,8 @@
 
 
 .scene4__bush {
-    width: 300px;
-    height: 300px;
+    width: 15vw;
+    height: 10vw;
     border-radius: 395px;
     border-radius: 120px;
     background: linear-gradient(180deg, #39A460 18%, #277142 50%, #163E25 100%);
@@ -38,8 +37,8 @@
 
 
 .scene4__tree__trunk {
-width: 36px;
-height: 500px;
+width: 2vw;
+height: 10vw;
 flex-shrink: 0;
 background: #382410;
 
@@ -50,8 +49,8 @@ background: #382410;
 
 
 .scene4__tree__leaves {
-    width: 600px;
-    height: 600px;
+    width: 15vw;
+    height: 20vw;
     flex-shrink: 0;
     border-radius: 1000px;
     background: linear-gradient(180deg, #39A460 18%, #277142 50%, #163E25 100%);
